# LABCAT

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
benches/: bench.rs
examples/: bounds.rs  demo.rs  gp.rs
oxidized_L_BFGS_B_C/: Cargo.toml  LICENSE  README.md  build.rs
oxidized_L_BFGS_B_C/src/: lbfgsb_bind.rs  lib.rs
oxidized_L_BFGS_B_C/src/c_source/: linesearch.c  subalgorithms.c
python/: Cargo.toml  pyproject.toml
python/examples/: bounds.py  demo.py
python/src/: lib.rs
python/src/examples/: test.py
src/: acq.rs  bound_types.rs  bounds.rs  bounds_array.rs  bounds_transforms.rs  doe.rs  ei.rs  gaussian.rs  gp.rs  hyp_opt.rs  hyp_opt_sigma_f_temp.rs  kde.rs  kernel.rs  labcat.rs  lhs.rs  lib.rs  main.rs  memory.rs  ndarray_utils.rs  python.rs  sqexp.rs  tpe.rs  tune.rs  uniform.rs  utils.rs
src/labcat/: memory.rs  mod.rs  tune.rs
