[package]
name = "labcat"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.96"
thiserror = "2.0.11"
enum_dispatch= "0.3.11"
rand = "0.9.0"
ndarray = "0.15.6"
ndarray-linalg = "0.16.0"
ndarray-rand = "0.14.0"
statrs = "0.18.0"
egobox-doe = "0.26.0"
sobol = "1.0.2"
pyo3 = { version="^0.15.0", optional=true }
numpy = { version="^0.15.0", optional=true }

[dev-dependencies] 
ndarray = { version = "0.15.6", features = ["rayon", "matrixmultiply-threading", "blas"] }

[target.'cfg(windows)'.dev-dependencies]
ndarray-linalg = { version = "0.16", features = ["intel-mkl-static"] }

[target.'cfg(unix)'.dev-dependencies]
ndarray-linalg = { version = "0.16", features = ["openblas-static"] }

[lib]
name = "labcat"
path = "./src/lib.rs"

[[example]]
name = "gp"

[profile.release]
lto = true

[features]
default = ["f64", "LHS", "PCA"]
f64 = [] # TODO: GET F32 WORKING
python = ["dep:pyo3", "dep:numpy"]
LHS = []
PCA = []